feat(appkit): observe native window surfaces (#323)
* feat(appkit): observe native window surfaces

* fix(appkit): observe effective appearance changes

* feat(appkit): route session-local surface stimuli

* test(appkit): strengthen surface routing proofs

* test(appkit): prove delayed open remains terminal

* test(appkit): prove public observable window surfaces

* feat(appkit): activate observable window surfaces

* test(appkit): prove native surface transitions and harness

* docs(appkit): clarify automated and manual surface gates

* fix(appkit): preserve initial surface observations

* test(appkit): await serialized surface drain

* fix(appkit): keep surface harness open after close